--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,3 +1,4 @@
 en:
   label_tweetbook: 'TweetBook'
 
+  notice_account_missing_data: The authentication provider did not provide all the data needed to create your account. Please make sure, that your email address is verified.
